# tick_engine

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
src/: BarBuilder.cpp  BarBuilder.h  CMakeLists.txt  Tick.h  TickCoordinator.cpp  TickCoordinator.h  TickReader.cpp  TickReader.h  TickWriter.cpp  TickWriter.h
src/cli/: CMakeLists.txt  main.cpp
test/: BarBuilderTest.cpp  CMakeLists.txt  TickCoordinatorTest.cpp  TickReaderTest.cpp  TickWriterTest.cpp
